rxvt-unicode changelog <= google-friendly title

TODO: -pe tabbed users want -e and probably lots of other things.
TODO: xcopyarea pass broken, fix and improve
TODO: event mechanism that replaces on_keyboard_command with something more scalable.
TODO: overlays collide with the way the out-of-focus cursor is being drawn
TODO: split perl documentation and urxvt.pm into separate files
TODO: harmonize --disable-options into position-dependent options.
TODO: "slow" rendering mode for bidi and scripts, pango!
TODO: read property sequence is broken with respect to utf-8 etc.
TODO: slow drag selection on remote display - other things seem fast (rxvt illness, motion hints?)
TODO: default selection should handle = better
WISH: look into XAddConnectionWatch, does anybody need that?
WISH: anyevent mouse notification / manage MotionMask better.
WISH: http://www120.pair.com/mccarthy/nextstep/intro.htmld/Workspace.html is the correct nextstep look.
DUMB: support tex fonts

	- use double-buffered drawing (xft fonts only). On many driver/hardware
          combination this actually increases xft drawing speed, at the expense
          of more network bandwidth and slight nausea on the side of the author.
	- readline perl extension now requires shift-click instead of a normal
          click.
        - disabled graphics-exposures on the main drawing GC, report any
          refresh bugs please.
	- improve property handling for -pe tabbed: avoid unnecessary property
          changes (for kde's benefit) at the expense of extra round-trips,
          improve size hint setting.
        - modified XIM according to a patch sent by Takano Akio that sets
          the preedit rectangle for OverTheSpot, which helps some input methods
          to correctly position their preedit window.
        - un-optimise the line clearing on newly scrolled-in lines a bit: the
          former reasoning was that any fg colour on default bg looks the same